--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,9 @@
   <h1>안녕하세요. 정수인입니다.</h1>
     
     <a href="html5.html">html5 보기</a>
+    <a href="login_1.html">login1 보기</a>
+    <a href="login_2.html">login2 보기</a>
+    <a href="login_3.html">login3 보기</a>
 </body>
 </html>
 
