--- a/web/login_3.html
+++ b/web/login_3.html
@@ -6,7 +6,7 @@
         <title>Login Page_3</title>
         <style>
             table {
-                background-color: cornsilk;
+                background-color: floralwhite;
             }
         </style>
     </head>
@@ -47,9 +47,11 @@
                         <td><label for="job">직 업</label></td>
                         <td>
                             <select id="job" name="job">
+                                <option value="학생">직업명</option>
                                 <option value="학생">학생</option>
                                 <option value="의사">의사</option>
                                 <option value="변호사">변호사</option>
+                                <option value="학생">가수</option>
                             </select>
                         </td>
                     </tr>
