--- a/web/javascript_validation.html
+++ b/web/javascript_validation.html
@@ -14,7 +14,7 @@
                 // 캐스팅
                 var userid = document.querySelector('#userid');
                 var pw = document.getElementById('pw');
-                var pwcheck = document.getElementById('pwcheck');
+                var pwcheck = document.getElementById('pw-check');
                 var username = document.querySelector('#username');
                 
                 // 유효성 검사1: 공백 여부 확인(공백이 없어야 한다.)
