--- a/web/project/project.html
+++ b/web/project/project.html
@@ -92,7 +92,9 @@
                         <label for="">아이디(이메일)</label>
                     </td>
                     <td>
-                        <input type="text" name="userid" id="editid" required readonly>
+                        <input type="text"
+                               name="userid"
+                               id="editid" required readonly>
                     </td>
                 </tr>
                 <tr>
@@ -100,7 +102,10 @@
                         <label for="">비밀번호</label>
                     </td>
                     <td>
-                        <input type="password" name="pw" id="editpw" required><div class="msg">필수 입력항목입니다.</div>
+                        <input type="password"
+                               name="pw"
+                               id="editpw" required>
+                        <div class="msg">필수 입력항목입니다.</div>
                     </td>
                 </tr>
                 <tr>
@@ -108,7 +113,9 @@
                         <label for="">비밀번호 확인</label>
                     </td>
                     <td>
-                        <input type="password" name="repw" id="editrepw" required><div class="msg">비밀번호가 일치하지 않습니다.</div>
+                        <input type="password"                               
+                               id="editrepw" required>
+                        <div class="msg">비밀번호가 일치하지 않습니다.</div>
                     </td>
                 </tr>
                 <tr>
@@ -116,7 +123,10 @@
                         <label for="">이름</label>
                     </td>
                     <td>
-                        <input type="text" name="userid" id="editname" required><div class="msg">필수 입력항목입니다.</div>
+                        <input type="text"
+                               name="username"
+                               id="editname" required>
+                        <div class="msg">필수 입력항목입니다.</div>
                     </td>
                 </tr>
                 <tr>
