--- a/web/jQuery/jquery_selector.html
+++ b/web/jQuery/jquery_selector.html
@@ -88,6 +88,7 @@
             border: 1px solid #aaa;
             width: 30%;
             float: left;
+            margin: 5px;
             
         }
         div.card>h2{
