--- a/web/jQuery/jquery_domcontrol.html
+++ b/web/jQuery/jquery_domcontrol.html
@@ -67,6 +67,7 @@
             });*/
 
             // 속성 값을 설정: set -> attr({속성이름:속성값, 속성이름:속성값,...})
+            // attr(): 속성과 관련된 모든 기능을 수행합니다.
             $('img').attr({
                 width: function(index) {
                     return (index + 1) * 100;
@@ -137,6 +138,8 @@
 
 <body>
 
+    
+    
     <img src="../img/cat4.jpg">
     <img src="../img1.png">
     <img src="../img2.jpg">
