--- a/jsp_project/AjaxTest/WebContent/ajax-10_serialize.html
+++ b/jsp_project/AjaxTest/WebContent/ajax-10_serialize.html
@@ -32,7 +32,7 @@
 		$('#myform').submit(function(){
 			console.log($(this).serialize());
 			
-			console.log($(this).seralizeArray());
+			console.log($(this).serializeArray());
 			
 			$.ajax({
 				url: 'parameter.jsp', 
